Fixed search bar jumpiness

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -21,7 +21,7 @@
         height: 35px;
       }
       .header__search__tail {
-        display: none;
+        visibility: hidden;
       }
     }
 
